--- a/scss/index.css
+++ b/scss/index.css
@@ -1,15 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-}
-
-.content {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
 .main {
   padding: 40px 16px 82px 16px;
   background: url("../image/mountain.png"), lightgray 50%/cover no-repeat;
@@ -127,6 +115,95 @@
   line-height: 20px;
   /* 125% */
   letter-spacing: 0.192px;
+}
+
+.description {
+  display: flex;
+  height: 100vh;
+  padding: 100px 15px;
+}
+.description .content {
+  display: flex;
+  gap: 120px;
+  justify-content: space-between;
+  align-items: center;
+}
+.description__images {
+  position: relative;
+  min-height: 526px;
+  min-width: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.description__image-back {
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
+}
+.description__title {
+  color: #F2BE22;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  /* 83.333% */
+}
+.description__text {
+  color: #18121E;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  /* 27px */
+  margin-bottom: 40px;
+}
+.description__mini-title {
+  color: #18121E;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%;
+  /* 38.4px */
+  margin-bottom: 40px;
+}
+.description__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.description__button {
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  background: #1A3E3E;
+  display: flex;
+  padding: 16px 36px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #FDFDFD;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+  /* 125% */
+  letter-spacing: 0.192px;
+  max-width: 200px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+.content {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=index.css.map */
