--- a/scss/index.css
+++ b/scss/index.css
@@ -1,11 +1,11 @@
 .main {
   padding: 40px 16px 82px 16px;
-  background: url("../image/mountain.png"), lightgray 50%/cover no-repeat;
+  background: url("../image/mountain.png") no-repeat center/cover;
   height: 100vh;
 }
 .main__title {
   text-transform: uppercase;
-  color: #FDFDFD;
+  color: #fdfdfd;
   font-size: 50px;
   font-style: normal;
   font-weight: 600;
@@ -35,34 +35,13 @@
 }
 .header__item {
   cursor: pointer;
-  color: #FDFDFD;
+  color: #fdfdfd;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   letter-spacing: 1.5px;
 }
-.header__button {
-  cursor: pointer;
-  border: none;
-  display: flex;
-  padding: 12px 24px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  border-radius: 4px;
-  background: #1A3E3E;
-}
-.header__button span {
-  color: #FDFDFD;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 20px;
-  /* 125% */
-  letter-spacing: 0.192px;
-}
-
 .search {
   display: flex;
   align-items: center;
@@ -77,7 +56,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  color: #FDFDFD;
+  color: #fdfdfd;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -95,7 +74,7 @@
   padding: 0 16px;
   height: 52px;
   border-radius: 8px;
-  border: 1px solid var(--wl-primary-primary-300, #E1E3E4);
+  border: 1px solid var(--wl-primary-primary-300, #e1e3e4);
 }
 .search__button {
   cursor: pointer;
@@ -106,9 +85,9 @@
   align-items: center;
   gap: 10px;
   border-radius: 4px;
-  background: #FDFDFD;
+  background: #fdfdfd;
   margin-bottom: 30px;
-  color: #1A3E3E;
+  color: #1a3e3e;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
@@ -174,7 +153,89 @@
   flex-direction: column;
   gap: 10px;
 }
-.description__button {
+.offers {
+  background: #F3F5F4;
+  display: flex;
+  height: 100vh;
+  padding: 100px 15px;
+}
+.offers .content {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  gap: 90px;
+}
+.offers .offers__wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 580px;
+}
+.offers .offers__title {
+  color: #F2BE22;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  /* 83.333% */
+  margin-bottom: 10px;
+}
+.offers .offers__mini-title {
+  color: #18121E;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 120%;
+  /* 38.4px */
+  margin-bottom: 40px;
+}
+.offers .offers__text {
+  color: #18121E;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  /* 27px */
+  margin-bottom: 40px;
+}
+.offers .offers__list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: 40px;
+}
+.offers .offers__images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.plus {
+  display: flex;
+  gap: 25px;
+  align-items: center;
+}
+.plus__title {
+  color: #18121E;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  /* 111.111% */
+  letter-spacing: 0.216px;
+  margin-bottom: 10px;
+}
+.plus__text {
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  /* 142.857% */
+}
+
+.button {
   cursor: pointer;
   border: none;
   border-radius: 4px;
@@ -191,7 +252,7 @@
   line-height: 20px;
   /* 125% */
   letter-spacing: 0.192px;
-  max-width: 200px;
+  max-width: 250px;
 }
 
 * {
