--- a/scss/section/_main.scss
+++ b/scss/section/_main.scss
@@ -1,10 +1,10 @@
-.main{
+.main {
   padding: 40px 16px 82px 16px;
-  background: url('../image/mountain.png'), lightgray 50% / cover no-repeat;
+  background: url('../image/mountain.png') no-repeat center / cover;
   height: 100vh;
-  &__title{
+  &__title {
     text-transform: uppercase;
-    color: #FDFDFD;
+    color: #fdfdfd;
     font-size: 50px;
     font-style: normal;
     font-weight: 600;
@@ -12,7 +12,8 @@
     letter-spacing: 2px;
     margin-bottom: 42px;
   }
-  .content{
+
+  .content {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -20,67 +21,50 @@
   }
 }
 
-.header{
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  &__list{
+  &__list {
     list-style: none;
     display: flex;
     gap: 22px;
     justify-content: space-between;
     align-items: center;
   }
-  &__item{
+  &__item {
     cursor: pointer;
-    color: #FDFDFD;
+    color: #fdfdfd;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: 1.5px;
   }
-  &__button{
-    cursor: pointer;
-    border: none;
-    display: flex;
-    padding: 12px 24px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 4px;
-    background: #1A3E3E;
-    span{
-      color: #FDFDFD;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 20px; /* 125% */
-      letter-spacing: 0.192px;
-    };
+  &__button {
   }
 }
 
-.search{
+.search {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 24px;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.20);
+  background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(3px);
   height: 161px;
-  &__label{
+  &__label {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    color: #FDFDFD;
+    color: #fdfdfd;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%; /* 21px */
   }
-  &__select{
+  &__select {
     color: white;
     background-color: inherit;
     font-size: 16px;
@@ -90,9 +74,9 @@
     padding: 0 16px;
     height: 52px;
     border-radius: 8px;
-    border: 1px solid var(--wl-primary-primary-300, #E1E3E4);
+    border: 1px solid var(--wl-primary-primary-300, #e1e3e4);
   }
-  &__button{
+  &__button {
     cursor: pointer;
     border: none;
     display: flex;
@@ -101,9 +85,9 @@
     align-items: center;
     gap: 10px;
     border-radius: 4px;
-    background: #FDFDFD;
+    background: #fdfdfd;
     margin-bottom: 30px;
-    color: #1A3E3E;
+    color: #1a3e3e;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
