--- a/scss/index.css
+++ b/scss/index.css
@@ -298,6 +298,94 @@
   position: absolute;
 }
 
+.blog {
+  background: #f3f5f4;
+  display: flex;
+  min-height: 1036px;
+  padding: 100px 15px;
+}
+.blog .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.blog__items {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.article-block {
+  border-radius: 10px;
+  background: #fdfdfd;
+  display: flex;
+  width: 580px;
+  padding: 16px;
+  align-items: center;
+  gap: 24px;
+  min-height: 312px;
+}
+.article-block__image {
+  width: 230px;
+  height: 280px;
+  flex-shrink: 0;
+}
+.article-block__image img {
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.article-block__texts {
+  min-height: 280px;
+  padding: 16px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.article-block__title {
+  color: #18121e;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  /* 133.333% */
+}
+.article-block__desc {
+  flex-grow: 1;
+  color: #18121e;
+  text-overflow: ellipsis;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  /* 142.857% */
+}
+.article-block__bottom {
+  display: flex;
+  justify-content: space-between;
+}
+.article-block__link {
+  cursor: pointer;
+  color: #1a3e3e;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  /* 142.857% */
+}
+.article-block__date {
+  color: #f2be22;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  /* 142.857% */
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -312,10 +400,11 @@
   font-weight: 400;
   line-height: 20px;
   /* 83.333% */
+  margin-bottom: 10px;
 }
 
 .mini-title {
-  color: #18121E;
+  color: #18121e;
   font-size: 32px;
   font-style: normal;
   font-weight: 800;
