--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,6 +5,9 @@
 @import 'section/directions';
 @import 'section/blog';
 @import 'section/photo-report';
+@import 'section/footer';
+@import 'section/company-information';
+
 * {
   img {
     object-fit: cover;
